--- a/css/mainCss.css
+++ b/css/mainCss.css
@@ -1,19 +1,71 @@
-*{margin:0;padding:0;font-family:Arial,Helvetica,sans-serif;}
-nav{	width:100%;height:3em;}
-nav li:hover{background-color:#bebebe;}
-nav ul{margin:0;padding:0;list-style:none;width:100%;}
-nav>ul{float:left;background-color:#cdcdcd;position:relative;}
-nav>ul>li{float:left;display:block;width:20%;height:3em;line-height:3em;text-align:center;color:#000;}
-nav>ul>li ul{display:none;}
-nav>ul>li li{background-color:#bebebe;width:99%;}
-nav>ul>li li:hover{background-color:#666;}
-nav ul li a{text-decoration:none;}
-nav ul li a:visited{color:black;}
-.clearfix{clear:both;}
+*{
+	margin:0;
+	padding:0;
+	font-family:Arial,Helvetica,sans-serif;
+}
+nav{
+	width:100%;
+	height:3em;
+}
+nav li:hover{
+	background-color:#bebebe;
+}
+nav ul{
+	margin:0;
+	padding:0;
+	list-style:none;
+	width:100%;
+}
+nav>ul{
+	float:left;
+	background-color:#cdcdcd;
+	position:relative;
+}
+nav>ul>li{
+	float:left;
+	display:block;
+	width:20%;
+	height:3em;
+	line-height:3em;
+	text-align:center;
+	color:#000;
+}
+nav>ul>li ul{
+	display:none;
+}
+nav>ul>li li{
+	background-color:#bebebe;
+	width:99%;
+}
+nav>ul>li li:hover{
+	background-color:#666;
+}
+nav ul li a{
+	text-decoration:none;
+}
+nav ul li a:visited{
+	color:black;
+}
+.clearfix{
+	clear:both;
+}
+nav:not(.js) li:hover>ul{
+    display:block;
+}
 @media only screen and (max-width: 640px){
-nav>ul>li{width:100%;height:2em;line-height:2em;}
-nav>ul>li ul{display:none;}
-nav>ul>li li:hover{background-color:#666;}
-nav>ul>li>ul>li{position:relative}
-.clearfix{clear:both;}
+	nav>ul>li{
+		width:100%;
+		height:2em;
+		line-height:2em;
+		margin-bottom:0.1em;
+	}
+	nav>ul>li ul{
+		display:none;
+	}
+	nav>ul>li li:hover{
+		background-color:#666;
+	}
+	nav>ul>li>ul>li{
+		position:relative
+	}
 }
