--- a/css/mainCss.css
+++ b/css/mainCss.css
@@ -12,18 +12,22 @@
   * -----------------------------------------------------------------------------------
   */
 
+/*Everithing*/
 *{
 	margin:0;
 	padding:0;
 	font-family:Arial,Helvetica,sans-serif;
 }
+/*The "nav" container*/
 nav{
 	width:100%;
 	height:3em;
 }
+/*Hover on "li" in "nav"*/
 nav li:hover{
 	background-color:#bebebe;
 }
+/*The "ul" in "nav"*/
 nav ul{
 	margin:0;
 	padding:0;
